# aurova_odom

./: .project  README.md
ackermann_to_odom/: CMakeLists.txt  package.xml
ackermann_to_odom/launch/: start_odometry.launch
ackermann_to_odom/src/: ackermann_to_odom_alg_node.cpp
aurova_odom/: CMakeLists.txt  package.xml
dualquat_LOAM/: CMakeLists.txt  Dockerfile  README.md  package.xml
dualquat_LOAM/config/: config_Heli.yaml  config_Kitti.yaml  config_NTU.yaml  config_conSLAM.yaml  config_hesai_pandar.yaml
dualquat_LOAM/include/: KDTree_STD.h  STDFunctions.h  STDesc.h  dualquatFunctions.h  laserMappingClass.h  odomEstimationClass.h
dualquat_LOAM/launch/: odomEstimation_HeLiPR_dataset.launch  odomEstimation_HeLiPR_display_STD.launch  odomEstimation_KITTI_dataset.launch  odomEstimation_KITTI_display_STD.launch  odomEstimation_NTU_dataset.launch  odomEstimation_conSLAM_dataset.launch  odomEstimation_hensai.launch  odomEstimation_ouster_BLUE_dataset.launch  odomEstimation_ouster_BLUE_display_std.launch
dualquat_LOAM/rviz/: blue_dataset.rviz  conSLAM.rviz  heliPR_displayed_std.rviz  kitti_displayed_std.rviz  kitti_fov.rviz  ntu_dataset.rviz
dualquat_LOAM/src/: KDTree_STD.cpp  STDesc.cpp  laserMappingClass.cpp  laserMappingNode.cpp  odomEstimationClass.cpp  odomEstimationNode.cpp  std_extractor.cpp
gps_to_odom/: CMakeLists.txt
gps_to_odom/include/: gps_to_odom_alg.h  gps_to_odom_alg_node.h
gps_to_odom/src/: gps_to_odom_alg_node.cpp
odom_estimation_pc/: CMakeLists.txt  package.xml
odom_estimation_pc/include/: odomEstimationClass.h
odom_estimation_pc/launch/: odomEstimation_VLP16.launch  odomEstimation_ouster.launch  odomEstimation_ouster_lite.launch
odom_estimation_pc/rviz/: odomEstimation.rviz
odom_estimation_pc/src/: odomEstimationClass.cpp  odomEstimationNode.cpp
